--- a/asserts/css/style.css
+++ b/asserts/css/style.css
@@ -8,20 +8,34 @@ nav{
     flex-direction: row;
     justify-content: center;
     width: 100%;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 header{
     display: flex;
     flex-direction: row;
+    padding: 2rem;
 }
 
-.imagenHeader{
-    width: 30%;
+.imagenHeader-left{
+    width: 35%;
+    margin-left: -5%;
 }
 
 .textoHeader{
     display: flex;
     flex-direction: column;
+    width: 40%;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+}
+
+h1{
+    font-size: 3rem;
 }
 
 .botonesHeader{
@@ -29,9 +43,26 @@ header{
     flex-direction: row;
 }
 
+button{
+    margin: 1rem;
+    height: 2.5rem;
+    border-radius: 1.5rem;
+    font-size: 0.9rem;
+    padding: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border: 0cm;
+}
+
+.imagenHeader-right{
+    width: 35%;
+    margin-right: -5%;
+}
+
 main{
     display: flex;
     flex-direction: column;
+    margin: 10%;
 }
 
 .imagenesMain{
@@ -43,11 +74,32 @@ main{
     margin: auto;
     width: 20%;
 }
+
+.text{
+    margin: 10%;
+    margin-left: 20%;
+    margin-right: 20%;
+    justify-content: center;
+    text-align: center;
+}
+
+h3{
+    font-size: 1rem;
+}
+
+h2{
+    font-size: 2rem;
+}
+
 footer{
     display: flex;
     flex-direction: row;
+    height: 20rem;
+    background-image: url(asserts\imagenes\desktop\image-footer.jpg);
+    background-repeat: no-repeat;
+    background-color: rgba(20, 20, 191, 0.354);
 }
+
 .sectionFooter{
-    display: flex;
-    flex-direction: row;
+    margin: 5%;
 }
